--- a/10-hpca-25.html
+++ b/10-hpca-25.html
@@ -1,18 +1,20 @@
 ---
-permalink: /asplos-24
-edition: asplos-24
-colocated_short: ASPLOS 2024
-colocated_long: The ACM International Conference on Architectural Support for Programming Languages and Operating Systems
-colocated_url: https://www.asplos-conference.org/asplos2024/ 
-event_date: 2024-04-27
-event_location: San Diego, CA, USA
+permalink: /hpca-25
+edition: hpca-25
+colocated_short: HPCA 2025
+colocated_long: IEEE International Symposium on High-Performance Computer Architecture
+colocated_url: https://hpca-conf.org/2025/ 
+event_date: TBD
+event_room: TBD
+event_location: Las Vegas, NV, USA
 is_upcoming: True 
 is_accepting_submission: False
-submission_url: https://easychair.org/my/conference?conf=emc25
+submission_url: 
+webinar_link: 
 is_registering: False 
 show_on_submission_page: True 
 show_program_summary: False
-submission_deadline: 2024-04-03
-submission_camera_ready: 2024-04-14
-submission_acceptance: 2024-04-12
+submission_deadline: TBD
+submission_camera_ready: TBD
+submission_acceptance: TBD
 ---
