--- a/_editions/10-hpca-25.html
+++ b/_editions/10-hpca-25.html
@@ -4,8 +4,8 @@ edition: hpca-25
 colocated_short: HPCA 2025
 colocated_long: IEEE International Symposium on High-Performance Computer Architecture
 colocated_url: https://hpca-conf.org/2025/ 
-event_date: TBD
-event_room: TBD
+event_date:
+event_room:
 event_location: Las Vegas, NV, USA
 is_upcoming: True 
 is_accepting_submission: False
@@ -14,7 +14,7 @@ webinar_link:
 is_registering: False 
 show_on_submission_page: True 
 show_program_summary: False
-submission_deadline: TBD
-submission_camera_ready: TBD
-submission_acceptance: TBD
+submission_deadline:
+submission_camera_ready:
+submission_acceptance:
 ---
