--- a/_editions/9-asplos-24.html
+++ b/_editions/9-asplos-24.html
@@ -7,12 +7,12 @@ colocated_url: https://www.asplos-conference.org/asplos2024/
 event_date: 2024-04-27
 event_room: Grande B
 event_location: San Diego, CA, USA
-is_upcoming: True 
+is_upcoming: False 
 is_accepting_submission: False
 submission_url: https://easychair.org/my/conference?conf=emc25
 webinar_link: https://events.teams.microsoft.com/event/4b58e9ce-e4ee-48fd-a071-b3570aff665b@656d4e6f-3fcf-4ab1-80d1-71331c6f3ce6
 is_registering: False 
-show_on_submission_page: True 
+show_on_submission_page: False 
 show_program_summary: False
 submission_deadline: 2024-04-03
 submission_camera_ready: 2024-04-25
