--- a/_editions/10-hpca-25.html
+++ b/_editions/10-hpca-25.html
@@ -12,7 +12,7 @@ is_accepting_submission: False
 submission_url: 
 webinar_link: 
 is_registering: False 
-show_on_submission_page: True 
+show_on_submission_page: False 
 show_program_summary: False
 submission_deadline:
 submission_camera_ready:
