--- a/_editions/10-hpca-25.html
+++ b/_editions/10-hpca-25.html
@@ -9,6 +9,6 @@ event_location: Las Vegas, NV, USA
 is_upcoming: True
 is_accepting_submission: False
 is_registering: False 
-show_on_submission_page: False 
-show_program_summary: False
+show_on_submission_page: True 
+show_program_summary: True
 ---
