--- a/10-hpca-25.html
+++ b/10-hpca-25.html
@@ -4,11 +4,11 @@ edition: hpca-25
 colocated_short: HPCA 2025
 colocated_long: IEEE International Symposium on High-Performance Computer Architecture
 colocated_url: https://hpca-conf.org/2025/ 
-event_date: (TBD)
+event_date: TBD
 event_location: Las Vegas, NV, USA
 is_upcoming: True
 is_accepting_submission: False
 is_registering: False 
-show_on_submission_page: False 
-show_program_summary: False
+show_on_submission_page: True 
+show_program_summary: True
 ---
