--- a/_editions/10-hpca-25.html
+++ b/_editions/10-hpca-25.html
@@ -4,7 +4,7 @@ edition: hpca-25
 colocated_short: HPCA 2025
 colocated_long: IEEE International Symposium on High-Performance Computer Architecture
 colocated_url: https://hpca-conf.org/2025/ 
-event_date: (TBD)
+event_date: TBD
 event_location: Las Vegas, NV, USA
 is_upcoming: True
 is_accepting_submission: False
