--- a/_editions/10-hpca-25.html
+++ b/_editions/10-hpca-25.html
@@ -10,5 +10,5 @@ is_upcoming: True
 is_accepting_submission: False
 is_registering: False 
 show_on_submission_page: True 
-show_program_summary: True
+show_program_summary: False
 ---
