--- a/_editions/10-hpca-25.html
+++ b/_editions/10-hpca-25.html
@@ -8,5 +8,6 @@ event_location: Las Vegas, NV, USA
 is_upcoming: True
 is_accepting_submission: False
 is_registering: False 
-show_on_submission_page: False 
+show_on_submission_page: False
+event_date: 2025-03-01
 ---
