--- a/_editions/10-hpca-25.html
+++ b/_editions/10-hpca-25.html
@@ -9,5 +9,5 @@ is_upcoming: True
 is_accepting_submission: False
 is_registering: False 
 show_on_submission_page: False
-event_date: 2025-03-01
+event_date: 2025/03/01-05
 ---
