--- a/_editions/10-hpca-25.html
+++ b/_editions/10-hpca-25.html
@@ -6,8 +6,11 @@ colocated_long: IEEE International Symposium on High-Performance Computer Archit
 colocated_url: https://hpca-conf.org/2025/ 
 event_location: Las Vegas, NV, USA
 is_upcoming: True
-is_accepting_submission: False
+is_accepting_submission: True
 is_registering: False 
-show_on_submission_page: False
+show_on_submission_page: True
+submission_url: https://easychair.org/cfp/emc2-2025
 event_date: 2025-03-02
+submission_deadline: 2025-01-10
+submission_acceptance: 2024-01-20
 ---
