--- a/program-committee.html
+++ b/program-committee.html
@@ -16,6 +16,9 @@ reviewers:
       affiliation: Meta
     - name: Gaurav Jain
       affiliation: D-Matrix
+    - name: Abhishek Singh
+      affiliation: Micron Technology
+
 ---
 <!--
 <h3 class="header">Program Committee</h3>
