--- a/_editions/10-hpca-25.html
+++ b/_editions/10-hpca-25.html
@@ -5,6 +5,7 @@ colocated_short: HPCA 2025
 colocated_long: IEEE International Symposium on High-Performance Computer Architecture
 colocated_url: https://hpca-conf.org/2025/ 
 event_location: Las Vegas, NV, USA
+event_room: Mesquite 3
 is_upcoming: True
 is_accepting_submission: False
 is_registering: False 
