--- a/_editions/10-hpca-25.html
+++ b/_editions/10-hpca-25.html
@@ -6,7 +6,7 @@ colocated_long: IEEE International Symposium on High-Performance Computer Archit
 colocated_url: https://hpca-conf.org/2025/ 
 event_location: Las Vegas, NV, USA
 event_room: Mesquite 3
-is_upcoming: True
+is_upcoming: False
 is_accepting_submission: False
 is_registering: False 
 show_on_submission_page: True
