--- a/_editions/10-hpca-25.html
+++ b/_editions/10-hpca-25.html
@@ -9,8 +9,8 @@ event_room: Mesquite 3
 is_upcoming: False
 is_accepting_submission: False
 is_registering: False 
-show_on_submission_page: True
-show_program_summary: True
+show_on_submission_page: False
+show_program_summary: False
 submission_url: https://easychair.org/cfp/emc2-2025
 event_date: 2025-03-02
 submission_deadline: 2025-01-22
