--- a/_editions/11-hpca-26.html
+++ b/_editions/11-hpca-26.html
@@ -3,10 +3,9 @@ permalink: /hpca-26
 edition: hpca-26
 colocated_short: Coming Soon
 colocated_long: Coming Soon!
-event_location: TBD
 is_upcoming: True
 is_accepting_submission: False
 is_registering: False 
 show_on_submission_page: True
-show_program_summary: True
+show_program_summary: False
 ---
