--- a/_editions/11-hpca-26.html
+++ b/_editions/11-hpca-26.html
@@ -2,7 +2,7 @@
 permalink: /hpca-26
 edition: hpca-26
 colocated_short: Coming Soon
-colocated_long: Coming Soon!
+colocated_long: Conference
 is_upcoming: True
 is_accepting_submission: False
 is_registering: False 
