--- a/_editions/11-hpca-26.html
+++ b/_editions/11-hpca-26.html
@@ -1,8 +1,8 @@
 ---
 permalink: /hpca-26
 edition: hpca-26
-colocated_short: Coming Soon
-colocated_long: Conference
+colocated_short: HPCA 2026
+colocated_long: IEEE International Symposium on High-Performance Computer Architecture 2026
 is_upcoming: True
 is_accepting_submission: False
 is_registering: False 
