--- a/_editions/11-hpca-26.html
+++ b/_editions/11-hpca-26.html
@@ -3,6 +3,7 @@ permalink: /hpca-26
 edition: hpca-26
 colocated_short: HPCA 2026
 colocated_long: IEEE International Symposium on High-Performance Computer Architecture 2026
+colocated_url: https://conf.researchr.org/home/hpca-2026
 is_upcoming: True
 event_location: Sydney, Australia
 is_accepting_submission: False
