--- a/_editions/11-hpca-26.html
+++ b/_editions/11-hpca-26.html
@@ -9,5 +9,5 @@ event_location: Sydney, Australia
 is_accepting_submission: False
 is_registering: False 
 show_on_submission_page: True
-show_program_summary: False
+show_program_summary: True
 ---
