--- a/_editions/11-hpca-26.html
+++ b/_editions/11-hpca-26.html
@@ -10,4 +10,7 @@ is_accepting_submission: False
 is_registering: False 
 show_on_submission_page: True
 show_program_summary: True
+event_date: 2026-01-31
+submission_deadline: TBD
+submission_acceptance: TBD
 ---
