--- a/_editions/11-hpca-26.html
+++ b/_editions/11-hpca-26.html
@@ -7,7 +7,7 @@ colocated_url: https://conf.researchr.org/home/hpca-2026/
 is_upcoming: True
 event_location: Sydney, Australia
 is_accepting_submission: True
-is_registering: True
+is_registering: False
 show_on_submission_page: True
 show_program_summary: True
 event_date: 2026-01-31
