--- a/_editions/11-hpca-26.html
+++ b/_editions/11-hpca-26.html
@@ -13,4 +13,5 @@ show_program_summary: True
 event_date: 2026-01-31
 submission_deadline: 2026-12-10
 submission_acceptance: 2026-12-24
+submission_url: https://easychair.org/cfp/11emc2
 ---
