--- a/_editions/11-hpca-26.html
+++ b/_editions/11-hpca-26.html
@@ -6,9 +6,9 @@ colocated_long: IEEE International Symposium on High-Performance Computer Archit
 colocated_url: https://conf.researchr.org/home/hpca-2026/
 is_upcoming: True
 event_location: Sydney, Australia
-is_accepting_submission: True
+is_accepting_submission: False
 is_registering: False
-show_on_submission_page: True
+show_on_submission_page: False
 show_program_summary: True
 event_date: 2026-02-01
 submission_deadline: 2026-12-10
