--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@ permalink: /index
 {% if upcoming_editions.size > 0 %}
 <div class="row">
   <h3 class="header"><i class="material-icons">memory</i> Upcoming Workshops</h3>
-	<h1>Important Notice: Due to issues with Australian immigration, the Eleventh EMC2 Workshop will no longer be held in Sydney. Instead, the Eleventh EMC2 will be held alongside ASPLOS 2026 in Pittsburgh. We apologize for any inconvenience and hope to welcome you in Pittsburgh.</h1>
+	<h1>Important Notice: </h1>
+		<i>Due to issues with Australian immigration, the Eleventh EMC2 Workshop will no longer be held in Sydney. Instead, the Eleventh EMC2 will be held alongside <b>ASPLOS 2026 in Pittsburgh</b>. We apologize for any inconvenience and hope to welcome you in Pittsburgh.</i>
   <div class="col s12">
     <ul class="collection">
       {% for ed in upcoming_editions %}
