--- a/_editions/11-hpca-26.html
+++ b/_editions/11-hpca-26.html
@@ -4,12 +4,12 @@ edition: hpca-26
 colocated_short: HPCA 2026
 colocated_long: IEEE International Symposium on High-Performance Computer Architecture 2026
 colocated_url: https://conf.researchr.org/home/hpca-2026/
-is_upcoming: True
+is_upcoming: False
 event_location: Sydney, Australia
 is_accepting_submission: False
 is_registering: False
 show_on_submission_page: False
-show_program_summary: True
+show_program_summary: False
 event_date: 2026-02-01
 submission_deadline: 2026-12-10
 submission_acceptance: 2026-12-24
