--- a/_editions/11-asplos-26.html
+++ b/_editions/11-asplos-26.html
@@ -7,9 +7,9 @@ colocated_url: https://www.asplos-conference.org/asplos2026/
 is_upcoming: True
 event_location: Pittsburgh, PA
 is_accepting_submission: False
-is_registering: False
-show_on_submission_page: False
+is_registering: True
+show_on_submission_page: True
 show_program_summary: True
-event_date: 2026-03-33
+event_date: 2026-03-22
 submission_url: https://easychair.org/cfp/11emc2
 ---
