--- a/_editions/11-asplos-26.html
+++ b/_editions/11-asplos-26.html
@@ -6,10 +6,12 @@ colocated_long:  The ACM International Conference on Architectural Support for P
 colocated_url: https://www.asplos-conference.org/asplos2026/
 is_upcoming: True
 event_location: Pittsburgh, PA
-is_accepting_submission: False
+is_accepting_submission: True
 is_registering: True
 show_on_submission_page: True
 show_program_summary: True
 event_date: 2026-03-22
+submission_deadline: 2026-1-31
+submission_acceptance: 2026-2-15
 submission_url: https://easychair.org/cfp/11emc2
 ---
