--- a/submission.html
+++ b/submission.html
@@ -100,7 +100,7 @@ show_note: True
 		<li><b>Style</b>: Submissions must  follow the guidelines provided by the <a href="https://www.ieee.org/conferences/publishing/templates.html">IEEE Double Column Format</a>. Submissions  should state the research problem, motivation, and technical contribution. All submissions must be in English. The submissions should be sent in a single PDF file.</li>
 		<li><b>Desk rejection</b>: Submissions that do not follow the length or style requirements above shall be automatically rejected without consideration of their merits.</li> 
 		<li><b>(Optional) Source code</b>: We encourage authors of accepted submissions to provide a link to their source code. To maintain a double-blind review process, you will be allowed to submit or link your code in the camera-ready stage.</li>
-		<li>If you have any issues, please email the publication and submission chairs Satyam Srivastava (<a href="mailto:ssrivastava@d-matrix.ai">ssrivastava@d-matrix.ai</a>) and Raj Parihar (<a href="mailto:parihar@meta.com">pariihar@meta.com</a>)</li>
+		<li>If you have any issues, please email the publication and submission chairs Satyam Srivastava (<a href="mailto:ssrivastava@d-matrix.ai">ssrivastava@d-matrix.ai</a>)</li>
 
 
 <!--
