--- a/_editions/11-asplos-26.html
+++ b/_editions/11-asplos-26.html
@@ -6,7 +6,7 @@ colocated_long:  The ACM International Conference on Architectural Support for P
 colocated_url: https://www.asplos-conference.org/asplos2026/
 is_upcoming: True
 event_location: Pittsburgh, PA
-is_accepting_submission: True
+is_accepting_submission: False
 is_registering: False
 show_on_submission_page: True
 show_program_summary: True
